# lambda-scale

./: CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py  setup.sh
dockerfiles/: base.Dockerfile  client.Dockerfile  server.Dockerfile
docs/: multi_thread_front_end.md
lambda-scale/proto/: a.py  signal_pb2.py  storage.proto  storage_pb2_grpc.py
lambda-scale/scripts/: client.sh  compile.sh  pre_load_model.sh  start_manager.sh  start_worker.sh  start_worker_local.sh
lambda-scale/simulation/: simulation.py
lambda-scale/storage_server/: server.py
lambda-scale/test/: sender.py  sender_from_trace.py
lambda-scale/workload/: Burst.txt  load.py
proto/: cudarpc.proto  quick_verify.proto  quick_verify_advanced.proto  signal.proto
slurm/baseline/: nccl.slurm  nccl_bcast.py  nccl_hkust.slurm  nccl_uva.slurm  perftest.slurm  select_ib.slurm  sllm-test copy.sh  sllm-test.sh  sllm.sh  sllm.slurm  slurm_hostname.slurm  slurm_hostname_salloc.slurm  slurm_hostname_sleep.slurm
slurm/deploy/: automate_experiment.slurm  configure.slurm  install_dependencies.sbatch  install_dependencies.sh  node_setup.sh
slurm/module/: load_modules_hkust.sh  load_modules_uva.sh
slurm/prerequisites/: install-json.sh  install-libfabric.sh  install-mutils-containers.sh  install-mutils.sh  (+1 more)
tests/: bert.py  bert_endpoint.py  client_test.cpp  config.txt  conv.py  cpu_memcpy_test.cpp  cv.py  cv_endpoint_profile.py  endpoint.py  external_con_local.py  external_con_remote.py  external_many2many.py  external_many2one.py  internel_many2many.py  internel_many2one.py  internel_multi_node.py  internel_multi_node_tcp.py  internel_multi_thread.py  internel_pipeline_tree_tcp.py  local_driver.cpp  local_runtime.cpp  memcpy_test.cpp  multi_thread_test.py  open_file_test.py  peer_memcpy_con.cpp  peer_memcpy_test.cpp  pre_load_models.py  priority_queue.py  quick_verify_advanced_pb2.py  quick_verify_cal.py  quick_verify_clear.py  quick_verify_controller_test.py  quick_verify_controller_test_K.py  quick_verify_controller_test_advanced.py  quick_verify_pb2.py  quick_verify_simulation.py  quick_verify_simulation_K.py  quick_verify_simulation_K_mini_load.py  quick_verify_test.py  quick_verify_test_advanced.py  (+11 more)
tests/torch_cpp/: CMakeLists.txt  api_wapper.cpp  api_wapper.hpp  concerned_kernels.txt  export_model.py  list.h  main.cpp
tools/: .gitignore  samples.npy
(+157 files in other folders)
